--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,10 @@
 /libpeerconnection.log
 npm-debug.log*
 testem.log
+
+# stray files copied from handlebars build
+/lib/handlebars.runtime.js
+/lib/precompiler.js
+
+# ignore test file
+/test.js
