--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ember-cli-named-blocks-polyfill",
+  "name": "ember-cli-named-block-slots-polyfill",
   "version": "0.0.0",
   "description": "The default blueprint for ember-cli addons.",
   "directories": {
@@ -7,9 +7,10 @@
     "test": "tests"
   },
   "scripts": {
+    "install": "",
     "build": "ember build",
     "start": "ember server",
-    "test": "ember try:each"
+    "test": "mocha ./node-tests --opts ./node-tests/mocha.opts && ember test"
   },
   "repository": "",
   "engines": {
@@ -18,35 +19,55 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "broccoli-asset-rev": "^2.4.5",
-    "ember-ajax": "^2.4.1",
-    "ember-cli": "2.9.1",
+    "broccoli": "^0.16.7",
+    "broccoli-concat": "2.3.6",
+    "assert-diff": "^1.0.1",
+    "espower-loader": "^1.0.0",
+    "mocha": "^3.0.0",
+    "mocha-eslint": "^2.0.2",
+    "mocha-only-detector": "^0.1.0",
+    "power-assert": "^1.3.1",
+    "rimraf": "^2.5.2",
+    "broccoli-asset-rev": "^2.4.2",
+    "broccoli-test-helpers": "0.0.9",
+    "ember-ajax": "2.5.1",
+    "ember-cli": "^2.11.0-beta.1",
     "ember-cli-app-version": "^2.0.0",
-    "ember-cli-dependency-checker": "^1.3.0",
-    "ember-cli-htmlbars": "^1.0.10",
-    "ember-cli-htmlbars-inline-precompile": "^0.3.3",
-    "ember-cli-inject-live-reload": "^1.4.1",
-    "ember-cli-jshint": "^1.0.4",
+    "ember-cli-blueprint-test-helpers": "^0.13.1",
+    "ember-cli-dependency-checker": "^1.2.0",
+    "ember-cli-htmlbars-inline-precompile": "^0.3.1",
+    "ember-cli-inject-live-reload": "^1.4.0",
     "ember-cli-qunit": "^3.0.1",
-    "ember-cli-release": "^0.2.9",
-    "ember-cli-sri": "^2.1.0",
     "ember-cli-test-loader": "^1.1.0",
+    "ember-cli-release": "^1.0.0-beta.1",
+    "ember-cli-sri": "^2.1.0",
     "ember-cli-uglify": "^1.2.0",
-    "ember-data": "^2.9.0",
+    "ember-cli-babel": "^5.1.7",
     "ember-disable-prototype-extensions": "^1.1.0",
     "ember-export-application-global": "^1.0.5",
-    "ember-load-initializers": "^0.5.1",
+    "ember-load-initializers": "^0.6.2",
     "ember-resolver": "^2.0.3",
-    "ember-welcome-page": "^1.0.3",
+    "eslint-plugin-node": "^3.0.3",
+    "glob": "^7.0.0",
     "loader.js": "^4.0.10"
   },
   "keywords": [
     "ember-addon"
   ],
   "dependencies": {
-    "ember-cli-babel": "^5.1.7"
+    "broccoli-persistent-filter": "^1.0.3",
+    "ember-cli-version-checker": "^1.0.2",
+    "strip-bom": "^2.0.0",
+    "@sclaxton/glimmer-syntax": "^0.0.2",
+    "@sclaxton/handlebars": "^0.0.1",
+    "ember-cli-htmlbars": "^1.1.1"
   },
   "ember-addon": {
-    "configPath": "tests/dummy/config"
+    "configPath": "tests/dummy/config",
+    "before": "ember-cli-htmlbars",
+    "paths": [
+      "lib/some-components",
+      "lib/test-components"
+    ]
   }
 }
