--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "install": "",
     "build": "ember build",
     "start": "ember server",
-    "test": "mocha ./node-tests --opts ./node-tests/mocha.opts && ember test"
+    "test": "node_modules/mocha/bin/mocha ./node-tests --opts ./node-tests/mocha.opts && ember test"
   },
   "repository": "",
   "engines": {
@@ -66,7 +66,6 @@
     "configPath": "tests/dummy/config",
     "before": "ember-cli-htmlbars",
     "paths": [
-      "lib/some-components",
       "lib/test-components"
     ]
   }
